Updating theme to use white version of UCSC Logo (per INC0563714)

--- a/libguides.css
+++ b/libguides.css
@@ -129,7 +129,8 @@ display:inline;
 }
 
 .header-main .site-logo img {
-         width: 97px;
+    width: 87px;
+	margin-top: 3px;
 }
 
 .header-main h1 {
